Project LearnSignsCore {
  database_type: 'MySQL'
  Note: '''
    Database schema for LearnSigns (Nusa.ai) - AI-powered sign language learning platform.
    Backend: Laravel 12.x | Frontend: React 18.x + Vite
  '''
}

Table users {
  id bigint [primary key, increment]
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  email_verified_at timestamp [null]
  password varchar(255) [not null]
  remember_token varchar(100) [null]
  role enum('student', 'teacher', 'corporate') [default: 'student']
  phone varchar(255) [null]
  institution varchar(255) [null, note: 'Kunci pengelompokan siswa oleh pendidik']
  stars integer [default: 0, note: 'Total akumulasi bintang gamifikasi']
  created_at timestamp
  updated_at timestamp
}

Table modules {
  id bigint [primary key, increment]
  title varchar(255) [not null]
  level_type enum('abjad', 'kata', 'kalimat') [not null, note: 'Tingkat kesulitan modul']
  target_gesture varchar(255) [not null, note: 'Kunci deteksi AI']
  description text [null]
  reference_image varchar(255) [null, note: 'Path gambar referensi gestur']
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table quests {
  id bigint [primary key, increment]
  title varchar(255) [not null]
  description text [not null]
  target_gesture varchar(255) [not null, note: 'Target gestur yang harus dideteksi AI']
  reward_stars integer [not null, note: 'Abjad: 50-75, Kata: 100-125, Kalimat: 200-300']
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table student_progress {
  id bigint [primary key, increment]
  user_id bigint [not null, ref: > users.id]
  module_id bigint [not null, ref: > modules.id]
  accuracy integer [not null, note: 'Skor akurasi tertinggi (0-100), mekanisme GREATEST']
  is_completed boolean [default: false, note: 'True jika akurasi >= 90%']
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, module_id) [unique]
  }
}

Table user_quests {
  id bigint [primary key, increment]
  user_id bigint [not null, ref: > users.id]
  quest_id bigint [not null, ref: > quests.id]
  completed_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, quest_id) [unique]
  }
}

Table dataset_records {
  id bigint [primary key, increment]
  label varchar(255) [not null, note: 'Label gestur: A, B, HALO']
  gesture_type enum('static', 'dynamic') [default: 'static']
  landmarks json [not null, note: 'Array matriks koordinat MediaPipe (21 titik 3D per tangan)']
  created_at timestamp
  updated_at timestamp

  indexes {
    label
  }
}

// Catatan Arsitektural:
// Tabel ini TIDAK memiliki Model Eloquent.
// Seluruh operasi CRUD dilakukan via DB::table('assignments') di EducatorController.
// Schema::hasTable('assignments') digunakan sebagai guard sebelum akses.
Table assignments {
  id bigint [primary key, increment]
  student_id bigint [not null, ref: > users.id]
  teacher_id bigint [not null, ref: > users.id]
  title varchar(255) [not null]
  target varchar(255) [not null, note: 'Target capaian tugas / gestur']
  notes text [null]
  status varchar(255) [default: 'Belum Dikerjakan', note: 'Belum Dikerjakan | Menunggu Penilaian | Selesai Dinilai']
  stars_earned integer [default: 0]
  feedback text [null]
  created_at timestamp
  updated_at timestamp

  Note: 'Tidak memiliki Model Eloquent. Diakses via DB::table() di EducatorController.'
}

Table personal_access_tokens {
  id bigint [primary key, increment]
  tokenable_type varchar(255) [not null]
  tokenable_id bigint [not null]
  name text [not null, note: 'Nama token: viba-auth-token']
  token varchar(64) [unique]
  abilities text [null]
  last_used_at timestamp [null]
  expires_at timestamp [null]
  created_at timestamp
  updated_at timestamp

  indexes {
    expires_at
  }
}